--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   auto_route: ^3.2.4
   carousel_slider: ^4.0.0
+  google_maps_flutter: ^2.1.3
 
 dev_dependencies:
   flutter_test:
