--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sih_frontend
 description: App frontend for Aadhar Connect
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -13,6 +13,7 @@ dependencies:
   auto_route: ^3.2.4
   carousel_slider: ^4.0.0
   google_maps_flutter: ^2.1.3
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
@@ -23,9 +24,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
   assets:
-    - assets/images/aadhar_logo.png
+    - assets/images/
 
   fonts:
     - family: Rubik
